==> coredevices/PebbleOS/src/fw/drivers/nrf5/spi.c <==
#include "spi_definitions.h"
#include "drivers/spi.h"
#include "drivers/spi_dma.h"
#include "drivers/dma.h"
#include "drivers/gpio.h"
#include "drivers/periph_config.h"
#include "system/passert.h"
#include "util/math.h"
#include "util/units.h"
#define NRF5_COMPATIBLE
#include <mcu.h>

static void prv_spi_slave_init(const SPISlavePort *slave, bool is_reinit) {
  SPIBus *bus = slave->spi_bus;

  nrfx_spim_config_t config = NRFX_SPIM_DEFAULT_CONFIG(
    bus->spi_sclk, bus->spi_mosi, bus->spi_miso, NRF_SPIM_PIN_NOT_CONNECTED);
  config.frequency = bus->state->spi_clock_speed_hz;
  config.mode = (slave->spi_cpol == SpiCPol_Low  && slave->spi_cpha == SpiCPha_1Edge) ? NRF_SPIM_MODE_0 :
                (slave->spi_cpol == SpiCPol_Low  && slave->spi_cpha == SpiCPha_2Edge) ? NRF_SPIM_MODE_1 :
                (slave->spi_cpol == SpiCPol_High && slave->spi_cpha == SpiCPha_1Edge) ? NRF_SPIM_MODE_2 :
                                                                                        NRF_SPIM_MODE_3;
  config.bit_order = slave->spi_first_bit == SpiFirstBit_MSB ? NRF_SPIM_BIT_ORDER_MSB_FIRST : NRF_SPIM_BIT_ORDER_LSB_FIRST;

  nrfx_err_t rv;
  if (is_reinit) {
    nrfx_spim_uninit(&bus->spi);
    rv = nrfx_spim_init(&bus->spi, &config, NULL /* always in blocking mode! */, NULL);
  } else {
    rv = nrfx_spim_init(&bus->spi, &config, NULL /* always in blocking mode! */, NULL);
  }
  PBL_ASSERTN(rv == NRFX_SUCCESS);
}

static void prv_spi_slave_deinit(const SPISlavePort *slave) {
  spi_ll_slave_acquire(slave);
  SPIBus *bus = slave->spi_bus;
  nrfx_spim_uninit(&bus->spi);
  spi_ll_slave_release(slave);
}

uint8_t spi_ll_slave_read_write(const SPISlavePort *slave, uint8_t out) {
  PBL_ASSERTN(slave->slave_state->initialized);
  PBL_ASSERTN(slave->slave_state->acquired);
  PBL_ASSERTN(slave->slave_state->scs_selected);
  
  uint8_t in;
  nrfx_spim_xfer_desc_t xfer;
  xfer.p_tx_buffer = &out;
  xfer.tx_length = 1;
  xfer.p_rx_buffer = &in;
  xfer.rx_length = 1;
  
  nrfx_err_t rv = nrfx_spim_xfer(&slave->spi_bus->spi, &xfer, 0);
  PBL_ASSERTN(rv == NRFX_SUCCESS);
  
  return in;
}

void spi_ll_slave_burst_write(const SPISlavePort *slave, const void *out, size_t len) {
  PBL_ASSERTN(slave->slave_state->initialized);
  PBL_ASSERTN(slave->slave_state->acquired);

  nrfx_spim_xfer_desc_t xfer;
  xfer.p_tx_buffer = out;
  xfer.tx_length = len;
  xfer.p_rx_buffer = NULL;
  xfer.rx_length = 0;
  
  nrfx_err_t rv = nrfx_spim_xfer(&slave->spi_bus->spi, &xfer, 0);
  PBL_ASSERTN(rv == NRFX_SUCCESS);
}

void spi_ll_slave_burst_read_write(const SPISlavePort *slave,
                                   const void *out,
                                   void *in,
                                   size_t len) {
  PBL_ASSERTN(slave->slave_state->initialized);
  PBL_ASSERTN(slave->slave_state->acquired);


  nrfx_spim_xfer_desc_t xfer;
  xfer.p_tx_buffer = out;
  xfer.tx_length = len;
  xfer.p_rx_buffer = in;
  xfer.rx_length = len;
  
  nrfx_err_t rv = nrfx_spim_xfer(&slave->spi_bus->spi, &xfer, 0);
  PBL_ASSERTN(rv == NRFX_SUCCESS);
}
