==> coredevices/PebbleOS/src/fw/drivers/stm32f2/spi.c <==
#include "spi_definitions.h"
#include "drivers/spi.h"
#include "drivers/spi_dma.h"
#include "drivers/dma.h"
#include "drivers/gpio.h"
#include "drivers/periph_config.h"
#include "system/passert.h"
#include "util/math.h"
#include "util/units.h"
#define STM32F2_COMPATIBLE
#define STM32F4_COMPATIBLE
#define STM32F7_COMPATIBLE
#include <mcu.h>
#define SPI_FREQ_LOG_TO_PRESCALER(LG) (((LG) - 1) * 0x8)
#define CR1_CLEAR_MASK ((uint16_t)0x3040)

static void prv_spi_slave_init(const SPISlavePort *slave) {
  prv_spi_enable_peripheral_clock(slave->spi_bus);
  SPIBus *bus = slave->spi_bus;
  // Grab existing configuration
  uint16_t tmpreg = bus->spi->CR1;
  // Clear BIDIMode, BIDIOE, RxONLY, SSM, SSI, LSBFirst, BR, MSTR, CPOL and CPHA bits
  tmpreg &= CR1_CLEAR_MASK;
  // get the baudrate prescaler
  uint32_t prescaler = prv_spi_find_prescaler(bus);
  // Master mode, 8 bit Data Size and Soft Slave select are hardcoded
  // Direction, CPOL, CPHA, baudrate prescaler and first-bit come from the device config
  tmpreg |= (uint16_t)((uint32_t)slave->spi_direction | SpiMode_Master |
    SpiDataSize_8b | slave->spi_cpol |
    slave->spi_cpha | SpiSlaveSelect_Soft |
    prescaler | slave->spi_first_bit);
  // Write result back to CR1
  bus->spi->CR1 = tmpreg;

#if MICRO_FAMILY_STM32F7
  // On STM32F7 we need to set FRXTH in order to do 8-bit transfers.
  // If we don't, the MCU always tries to read 16-bits even though we
  // specified that the data is 8-bits.
  // Why clear isn't 8-bit is beyond me, but ok.
  bus->spi->CR2 |= SPI_CR2_FRXTH;
#endif

  // Activate the SPI mode (Reset I2SMOD bit in I2SCFGR register)
  bus->spi->I2SCFGR &= (uint16_t)~((uint16_t)SPI_I2SCFGR_I2SMOD);

  prv_spi_disable_peripheral_clock(slave->spi_bus);
}

static void prv_spi_slave_deinit(const SPISlavePort *slave) {
  spi_ll_slave_acquire(slave);
  SPIBus *bus = slave->spi_bus;
  if (bus->state->spi_apb == SpiAPB_1) {
    // Enable SPIx reset state
    RCC_APB1PeriphResetCmd(bus->state->spi_clock_periph, ENABLE);
    // Release SPIx from reset state
    RCC_APB1PeriphResetCmd(bus->state->spi_clock_periph, DISABLE);
  } else if (bus->state->spi_apb == SpiAPB_2) {
    // Enable SPIx reset state
    RCC_APB2PeriphResetCmd(bus->state->spi_clock_periph, ENABLE);
    // Release SPIx from reset state
    RCC_APB2PeriphResetCmd(bus->state->spi_clock_periph, DISABLE);
  }
  spi_ll_slave_release(slave);
}

uint8_t spi_ll_slave_read_write(const SPISlavePort *slave, uint8_t out) {
  PBL_ASSERTN(slave->slave_state->initialized);
  PBL_ASSERTN(slave->slave_state->acquired);
  PBL_ASSERTN(slave->slave_state->scs_selected);
  prv_spi_transmit_flush_blocking(slave->spi_bus);
  prv_spi_send_data(slave->spi_bus, out);
  prv_spi_receive_wait_ready_blocking(slave->spi_bus);
  return prv_spi_receive_data(slave->spi_bus);
}

void spi_ll_slave_burst_write(const SPISlavePort *slave, const void *out, size_t len) {
  PBL_ASSERTN(slave->slave_state->initialized);
  PBL_ASSERTN(slave->slave_state->acquired);
  const uint8_t *cptr = out;
  while (len--) {
    prv_spi_send_data(slave->spi_bus, *(cptr++));
    prv_spi_transmit_flush_blocking(slave->spi_bus);
  }
}

void spi_ll_slave_burst_read_write(const SPISlavePort *slave,
                                   const void *out,
                                   void *in,
                                   size_t len) {
  PBL_ASSERTN(slave->slave_state->initialized);
  PBL_ASSERTN(slave->slave_state->acquired);
  const uint8_t *outp = out;
  uint8_t *inp = in;
  for (size_t n = 0; n < len; ++n) {
    uint8_t byte_out = outp ? *(outp++) : 0;
    uint8_t byte_in = spi_ll_slave_read_write(slave, byte_out);
    if (inp) {
      *(inp++) = byte_in;
    }
  }
}
